--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+
+Multiplayer2D/Library/ArtifactDB
+Multiplayer2D/Library
+Multiplayer2D/Temp
